--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,11 +32,10 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   font_awesome_flutter: ^10.7.0
-
+  http: ^0.13.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
 dev_dependencies:
   flutter_test:
     sdk: flutter
