--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   intl: ^0.18.1
   font_awesome_flutter: ^10.7.0
   http: ^0.13.6
+  firebase_core: ^3.13.1
+  firebase_auth: ^5.5.4
+  firebase_storage: ^12.4.6
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
