--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_colorpicker: ^1.1.0
+  google_sign_in: ^6.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
