--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_colorpicker: ^1.1.0
   google_sign_in: ^6.1.0
+  firebase_app_check: ^0.3.2+6
+  fl_chart: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
