--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   fl_chart: ^1.0.0
   shared_preferences: ^2.2.2
   provider: ^6.0.0
+  flutter_local_notifications: ^17.0.0
+  permission_handler: ^11.0.2
+  timezone: ^0.9.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
