--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   intl: ^0.18.1
   font_awesome_flutter: ^10.7.0
-  http: ^0.13.6
+  http: 1.4.0
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   firebase_storage: ^12.4.6
@@ -46,9 +46,9 @@ dependencies:
   fl_chart: ^1.0.0
   shared_preferences: ^2.2.2
   provider: ^6.0.0
-  flutter_local_notifications: ^17.0.0
-  permission_handler: ^11.0.2
-  timezone: ^0.9.2
+  flutter_local_notifications: ^19.1.0
+  permission_handler: ^11.3.0
+  timezone: ^0.10.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
