--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   permission_handler: ^11.3.0
   timezone: ^0.10.0
   audioplayers: ^5.2.1
+  flutter_stripe: ^10.1.1
+  url_launcher: ^6.3.1
+  firebase_dynamic_links: ^6.1.7
 dev_dependencies:
   flutter_test:
 
